# autopsy

./: .gitignore  README.md  pyproject.toml
autopsy/: __init__.py  analyzer.py  cli.py  report.py  types.py
autopsy/parsers/: __init__.py  deploys.py  git.py  logs.py
examples/: 01_basic_analysis.py  sample_deploys.json
tests/: test_parsers.py
